css/style.css
/* yellow: #fed105 */
/* dark blue: #010e1e */
/* light blue: #275799 */

::-webkit-scrollbar {
    display: none;
}
html{
  font-family: 'Lato', sans-serif;
}
body{
  background-color:white;
  transition:all 0.5s ease;
}
nav.unscrolled{
  background-color:transparent;
  box-shadow:none;
}
nav{
  background-color:#275799;
  font-weight:bold;
  transition:all 0.5s ease;
  padding:0;
}
strong{
  font-weight:900;
}
.navbar-fixed{
  position:absolute;
  top:0;
  font-size:20px;
}
.hack-logo{
  padding-left: 1%;
  font-size:40px;
}
.hack-uci{
  width:50%;
  height:50%;
}
.heading-image{
  background-image:url('../images/bren.png');
  background-size: 100%;
  background-repeat: no-repeat;
  background-position: center;
  background-color:#010e1e;
  color:white;
  min-height:400px;
}
.slogan{
  padding-bottom: 5%;
}
.about-info{
  color:#002f5f;
  font-size:30px;
}
.faq{
  background-color:#010e1e;
  color:white;
  /*min-height: 500px;*/
}
.application{
  min-height: 300px;
}
.card-panel{
  margin: 4% 0 0 0;
  transition: all 0.5s ease;
}
.card-color{
  background-color: #275799;
}
.info{
  font-size:40px;
  padding:0;
}
.heading{
  font-size:25px;
}
.card-info{
  padding-bottom:20px;
}
.sponsor-image{
  width:25%;
  opacity: 0.5;
  margin: 0px 50px 0px 50px;
  vertical-align:middle;
}
.sponsor-image-2{
  max-width:25%;
  opactiy: 0.5;
  margin:10px;
}
.sponsor-image:hover{
  opacity:1;
}
.sponsor-btn{
  margin-bottom: 50px;
}
.menu-btn{
  margin-left: 10%;
}
.footer-copyright{
  /*background-color:#010e1e;*/
  background-color:#275799;
  color:white;
  padding:1%;
}
.h1{
  padding-bottom:3%;
}
.foot{
  color:white;
}
.foot:hover{
  color:teal;
}
.foot-link{
  color:white;
  margin: 10px;
}
.raining-img{
  visibility:hidden;
}
.rain{
  cursor: crosshair;
}
.modal{
  position:fixed;
  top:15%;
  width:50%;
  z-index:100000;
}
.email-text-area{
  height:200px;
}

